--- a/streamamg-sdk-playkit/src/main/res/layout/controls_view.xml
+++ b/streamamg-sdk-playkit/src/main/res/layout/controls_view.xml
@@ -70,8 +70,20 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
+                android:id="@+id/live_button"
+                android:visibility="gone"
+                android:fontFamily="@font/spartan_family"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:text="@string/go_live"
+                android:textColor="@color/exo_white"
+                android:textSize="12sp" />
+
+            <TextView
                 android:id="@+id/start_time"
-                android:layout_width="60dp"
+                android:fontFamily="@font/spartan_family"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="@string/empty_time"
@@ -92,11 +104,13 @@
 
             <TextView
                 android:id="@+id/end_time"
+                android:fontFamily="@font/spartan_family"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:text="@string/empty_time"
                 android:textColor="@color/exo_white"
+                android:visibility="gone"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -133,6 +147,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:fontFamily="@font/spartan_family"
                 android:text="@string/spoiler_free"
                 android:textColor="@color/exo_white"
                 android:textSize="12sp" />
