Roll in to version 0.3

--- a/streamamg-sdk-playkit/src/main/res/layout/controls_view.xml
+++ b/streamamg-sdk-playkit/src/main/res/layout/controls_view.xml
@@ -87,8 +87,13 @@
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="@string/empty_time"
+                android:lines="1"
+                app:autoSizeTextType="uniform"
+                app:autoSizeMinTextSize="8sp"
+                app:autoSizeMaxTextSize="11sp"
+                app:autoSizeStepGranularity="1sp"
                 android:textColor="@color/exo_white"
-                android:textSize="12sp" />
+                android:textSize="11sp" />
 
             <SeekBar
                 android:id="@+id/scrub_bar"
