--- a/streamamg-sdk-playkit/src/main/res/layout/controls_view.xml
+++ b/streamamg-sdk-playkit/src/main/res/layout/controls_view.xml
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:gravity="center"
             android:orientation="horizontal"
@@ -73,27 +73,31 @@
                 android:id="@+id/live_button"
                 android:visibility="gone"
                 android:fontFamily="@font/spartan_family"
-                android:layout_width="80dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:gravity="end"
+                android:gravity="center"
                 android:text="@string/go_live"
+                app:autoSizeTextType="uniform"
+                app:autoSizeMinTextSize="8sp"
+                app:autoSizeMaxTextSize="10sp"
+                app:autoSizeStepGranularity="1sp"
                 android:textColor="@color/exo_white"
-                android:textSize="12sp" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/start_time"
                 android:fontFamily="@font/spartan_family"
-                android:layout_width="120dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:gravity="end"
+                android:gravity="start"
                 android:text="@string/empty_time"
                 android:lines="1"
                 app:autoSizeTextType="uniform"
                 app:autoSizeMinTextSize="8sp"
-                app:autoSizeMaxTextSize="11sp"
+                app:autoSizeMaxTextSize="10sp"
                 app:autoSizeStepGranularity="1sp"
                 android:textColor="@color/exo_white"
-                android:textSize="11sp" />
+                android:textSize="10sp" />
 
             <SeekBar
                 android:id="@+id/scrub_bar"
