--- a/streamamg-sdk-playkit/src/main/res/layout/controls_view.xml
+++ b/streamamg-sdk-playkit/src/main/res/layout/controls_view.xml
@@ -112,7 +112,7 @@
                     <TextView
                         android:id="@+id/start_time"
                         android:fontFamily="@font/spartan_family"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="start"
                         android:text="@string/empty_time"
