--- a/streamamg-sdk-playkit/src/main/res/values/colors.xml
+++ b/streamamg-sdk-playkit/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="amg_vod_track">#71ABF3</color>
     <color name="white">#FFFFFF</color>
     <color name="white_opacity_70">#B3ffffff</color>
+    <color name="transparent">#00000000</color>
+    <color name="semi_transparent">#88000000</color>
+    <color name="bitrate_dark_gray">#0D1321</color>
+    <color name="bitrate_medium_gray">#21242D</color>
 </resources>
