SMD-1813 AMG SDK 1.1.8 release
SMD-1711 - Set session ID or pass in a JWT
SMD-1713 - Add UI/controls for subtitles to PlayKit

--- a/streamamg-sdk-playkit/src/main/res/drawable/rounded_bg.xml
+++ b/streamamg-sdk-playkit/src/main/res/drawable/rounded_bg.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/bitrate_dark_gray"/> <!-- Solid -->
+        android:color="@color/option_dark_gray"/> <!-- Solid -->
 
     <stroke
         android:width="3dp"
-        android:color="@color/bitrate_dark_gray" /> <!-- Border -->
+        android:color="@color/option_dark_gray" /> <!-- Border -->
 
     <corners
         android:radius="4dp"/> <!-- Shape rounded value -->
