--- a/streamamg-sdk-playkit/src/main/res/layout/controls_view.xml
+++ b/streamamg-sdk-playkit/src/main/res/layout/controls_view.xml
@@ -128,11 +128,22 @@
                         android:textSize="20sp" />
 
                     <ImageButton
+                        android:id="@+id/subtitle_button"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:scaleType="fitCenter"
+                        android:padding="0dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:background="@color/transparent"
+                        android:src="@drawable/ic_subtitles"/>
+
+                    <ImageButton
                         android:id="@+id/settings_button"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:scaleType="fitCenter"
-                        android:padding="5dp"
+                        android:padding="3dp"
                         android:background="@color/transparent"
                         android:src="@drawable/ic_settings"/>
 
@@ -233,6 +244,41 @@
                     android:visibility="gone">
 
                     <!-- Adding here bitrate selector buttons programmatically -->
+
+                </LinearLayout>
+
+            </ScrollView>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardSubtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
+            android:fillViewport="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/scrub_bar_view"
+            app:layout_constraintEnd_toEndOf="@id/scrub_bar_view"
+            app:cardBackgroundColor="@color/transparent"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="8dp">
+
+            <ScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom">
+
+                <LinearLayout
+                    android:id="@+id/subtitle_selector_view"
+                    android:layout_width="145dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|bottom"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                    <!-- Adding here subtitle selector buttons programmatically -->
 
                 </LinearLayout>
 
